# couchbase-lite-java-common

./: .gitignore  LICENSE  LICENSES.txt  README.md  WARNING.txt
common/: CMakeLists.txt  jni_android.ld  jni_gnu.ld  jni_osx.ld  jni_win.ld
common/main/cpp/: Defer.hh  MetadataHelper.cc  MetadataHelper.h  NOTE.txt  P2P_Sync_Documentation.md  com_couchbase_lite_internal_core_C4.h  com_couchbase_lite_internal_core_C4Base.h  com_couchbase_lite_internal_core_C4BlobKey.h  com_couchbase_lite_internal_core_C4BlobReadStream.h  com_couchbase_lite_internal_core_C4BlobStore.h  com_couchbase_lite_internal_core_C4BlobStore_ManagedC4BlobStore.h  com_couchbase_lite_internal_core_C4BlobStore_UnmanagedC4BlobStore.h  com_couchbase_lite_internal_core_C4BlobWriteStream.h  com_couchbase_lite_internal_core_C4Database.h  com_couchbase_lite_internal_core_C4DatabaseObserver.h  com_couchbase_lite_internal_core_C4Database_ManagedC4Database.h  com_couchbase_lite_internal_core_C4Database_UnmanagedC4Database.h  com_couchbase_lite_internal_core_C4DocEnumerator.h  com_couchbase_lite_internal_core_C4Document.h  com_couchbase_lite_internal_core_C4DocumentObserver.h  com_couchbase_lite_internal_core_C4FullTextMatch.h  com_couchbase_lite_internal_core_C4Key.h  com_couchbase_lite_internal_core_C4Log.h  com_couchbase_lite_internal_core_C4Log_RawLog.h  com_couchbase_lite_internal_core_C4Prediction.h  com_couchbase_lite_internal_core_C4Query.h  com_couchbase_lite_internal_core_C4QueryEnumerator.h  com_couchbase_lite_internal_core_C4RawDocument.h  com_couchbase_lite_internal_core_C4Replicator.h  com_couchbase_lite_internal_core_C4Socket.h  com_couchbase_lite_internal_core_C4TestUtils.h  com_couchbase_lite_internal_core_NativeC4Base.h  com_couchbase_lite_internal_core_NativeC4Key.h  com_couchbase_lite_internal_core_NativeC4Prediction.h  com_couchbase_lite_internal_core_NativeC4QueryObserver.h  com_couchbase_lite_internal_core_impl_NativeBluetoothPeer.h  com_couchbase_lite_internal_core_impl_NativeC4.h  com_couchbase_lite_internal_core_impl_NativeC4BTSocketFactory.h  com_couchbase_lite_internal_core_impl_NativeC4Blob.h  com_couchbase_lite_internal_core_impl_NativeC4Collection.h  (+67 more)
common/main/java/com/couchbase/lite/: AbstractCollection.java  AbstractConsoleLogger.java  AbstractDatabase.java  AbstractDatabaseConfiguration.java  AbstractFunction.java  AbstractIndex.java  AbstractIndexBuilder.java  AbstractJFleeceCollection.java  AbstractQuery.java  AbstractReplicator.java  AbstractReplicatorConfiguration.java  Array.java  ArrayExpression.java  ArrayExpressionIn.java  ArrayExpressionSatisfies.java  ArrayFunction.java  ArrayIndexConfiguration.java  ArrayInterface.java  Authenticator.java  BaseDatabase.java  BaseLogger.java  BaseMValue.java  BasicAuthenticator.java  Blob.java  BuilderQuery.java  CBLConverter.java  CBLError.java  ChangeListener.java  ChangeListenerToken.java  ChangeNotifier.java  ClientCertificateAuthenticator.java  Collation.java  Collection.java  CollectionChange.java  CollectionChangeListener.java  CollectionChangeNotifier.java  CollectionConfiguration.java  CollectionInterface.java  ConcurrencyControl.java  Conflict.java  (+120 more)
common/main/java/com/couchbase/lite/internal/: AbstractExecutionService.java  AbstractSocketFactory.java  AbstractTLSIdentity.java  BaseAuthenticator.java  BaseCollection.java  BaseImmutableDatabaseConfiguration.java  BaseImmutableReplicatorConfiguration.java  BaseJFleeceCollection.java  BaseReplicatorConfiguration.java  BaseSocketFactory.java  CBLInternalException.java  CBLStatus.java  DbContext.java  ExecutionService.java  KeyManager.java  Listenable.java  MultipeerConflictResolverWrapper.java  QueryLanguage.java  ReplicationCollection.java  SecurityManager.java
common/main/java/com/couchbase/lite/logging/: BaseLogSink.java  BaseLogger.java  CustomLogger.java  FileLogSink.java  FileLogger.java  LogSinks.java  Loggers.java
common/main/java/com/couchbase/lite/utils/: FileUtils.java  Fn.java
common/main/java/okhttp3/internal/tls/: CustomHostnameVerifier.java  DistinguishedNameParser.java
common/main/kotlin/com/couchbase/lite/: CollectionExtensions.kt  CommonConfigurationFactories.kt  CommonFlows.kt  QueryExtensions.kt
common/main/kotlin/com/couchbase/lite/internal/: Helpers.kt
common/systemTest/java/com/couchbase/lite/: ReplicatorPullTest.kt  ReplicatorWithSyncGatewayDBTest.java  ReplicatorWithSyncGatewaySSLTest.java  ReplicatorWithSyncGatewayTest.java
common/test/assets/: mp-ca.p12  teststore.p12
common/test/java/com/couchbase/lite/: ArrayIndexTest.kt  ArrayTest.java  AuthenticatorTest.java  BaseCollectionTest.java  BaseCollectionTest.kt  BaseDbTest.java  BaseDbTest.kt  BaseQueryTest.java  BaseReplicatorTest.java  BaseReplicatorTest.kt  BaseTest.java  BlobTest.java  CollectionCrossDbTest.kt  CollectionListenerTest.kt  CollectionQueryTest.java  CollectionQueryTest.kt  CollectionTest.java  CollectionTest.kt  ConcurrencyTest.java  ConflictResolutionTest.kt  CookieStoreTest.kt  DatabaseTest.java  DatabaseTest.kt  DbCollectionsTest.kt  DictionaryTest.java  DocumentTest.java  EncodingTest.java  ErrorCaseTest.java  FullTextFunctionTest.java  IteratorTest.kt  JSONTest.java  LegacyBaseDbTest.java  LegacyLogTest.kt  LiveQueryTest.java  LoadTest.java  LoadTest.kt  LogTest.java  LogTest.kt  MigrationTest.java  MiscTest.java  (+20 more)
common/test/java/com/couchbase/lite/internal/: ExecutionServiceTest.kt  ReplicationConfigurationTest.kt
common/test/java/com/couchbase/lite/logging/: LogTest.kt
common/test/java/com/couchbase/lite/mock/: ReplicatorMocks.kt  SocketMocks.java  SocketMocks.kt  TestReplicatorChangeListener.java
common/test/java/com/couchbase/lite/utils/: FlakyTest.java  IOUtils.java  JsonUtilsTest.kt  KotlinHelpers.java  StopWatch.java  StringUtilsTest.kt  TestTimer.java  TestUtils.java  URIUtilsTest.java  ZipUtils.java
common/test/kotlin/: README.md
common/test/kotlin/com/couchbase/lite/: CollectionSerializationTest.kt  CommonConfigFactoryTest.kt  ConfigFactoryTest.kt  DeprecatedConfigFactoryTest.kt  FlowTest.kt  ResultSerializationTest.kt
doc/: fleece.puml
(+321 files in other folders)
